2015-12-03  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (discard_until): Move the trimming of the undo stack
	into a separate function, so it can be used elsewhere.

2015-12-02  Benno Schulenberg  <bensberg@justemail.net>
	* doc/syntax/python.nanorc: Don't colour triple quotes by themselves.
	* doc/syntax/python.nanorc: Treat backslashed quotes properly, and
	don't colour triple-quoted strings in two manners.
	* src/text.c (do_justify): Accept not just the Uncut keystroke but
	also the Undo keystroke for undoing a justification.

2015-12-02  Arturo Borrero González  <arturo.borrero.glez@gmail.com>
	* doc/syntax/nftables.nanorc: New file; syntax colouring for nftables.
	This addresses Debian bug #805288.

2015-12-01  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (do_insertfile): Mark the buffer as mofified only when
	actually something was inserted.  This fixes Savannah bug #45409.
	* src/files.c (do_insertfile): Rename two variables for clarity.
	* src/text.c (redo_cut): Delete two redundant assignments.
	* src/winio.c (edit_draw): Move a check to a better place.
	* src/winio.c (edit_draw): Rename a label and elide an 'else'.
	* src/winio.c (edit_draw): Unindent after previous change.
	* src/color.c (reset_multis_before, reset_multis_after): Delete four
	superfluous checks.

2015-11-30  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (redo_cut, update_undo): When cutting reaches the EOF,
	and NONEWLINES is set, there is no next line at which to put the
	cutting point for a redo.  So put it at the very end of the cut.
	This fixes Savannah bug #46541.
	* src/text.c (add_undo, update_undo, do_undo, do_redo), src/nano.h:
	Store and retrieve the correct file size before and after an action.
	This fixes Savannah bug #45523.
	* src/files.c (free_chararray): Allow the parameter to be NULL.
	This fixes Savannah bug #46420.

2015-11-29  Benno Schulenberg  <bensberg@justemail.net>