@@ -1,6 +1,9 @@
 2015-12-03  Benno Schulenberg  <bensberg@justemail.net>
 	* src/text.c (discard_until): Move the trimming of the undo stack
 	into a separate function, so it can be used elsewhere.
+	* src/text.c (do_justify): Discard the entire undo stack, to prevent
+	nano from dying (or making mistakes) when trying to undo edits after
+	a justification.  This works around Savannah bug #45531.
 
 2015-12-02  Benno Schulenberg  <bensberg@justemail.net>
 	* doc/syntax/python.nanorc: Don't colour triple quotes by themselves.
